--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,9 @@ dependencies:
   shared_preferences: ^0.5.3+5
   sqfentity_gen: ^1.1.0+4
   swipedetector: ^1.2.0
+  sliding_up_panel: ^0.3.6
+  rflutter_alert: ^1.0.3
+  table_calendar: ^2.2.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
